--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="world.css" type="text/css" rel="stylesheet" />
 
 		<!-- you write this -->
-		<script src="world.js" type="text/javascript"></script>
+		
 	</head>
 
 	<body>
@@ -21,6 +21,7 @@
 				<label for="country">Country:</label>
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
 				<button id="lookup">Lookup</button>
+				<button id = "city"> Lookup city</button>
 			</div>
 			
 			<div id="result">
@@ -28,6 +29,6 @@
 				<!-- countries will appear here -->
 			</div>
 		</main>
-
+		<script src="world.js" type="text/javascript"></script>
 	</body>
 </html>
