--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 	<body>
 		<header>
 			<h1>World Database Lookup</h1>
+			
 		</header>
 
 		<main>
 			<div id="controls">
 				<label for="country">Country:</label>
+				
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
-				<button id="lookup">Lookup</button>
-				<button id = "city"> Lookup city</button>
+				<div id = "btns">
+					<button id="lookup">Lookup</button>
+					<button id = "city"> Lookup Cities</button>
+				</div>
 			</div>
 			
 			<div id="result">
